Add docs.rs as documentation source

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "fed"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Scott Steele <scottlsteele@gmail.com>"]
 
 homepage = "https://github.com/scooter-dangle/fed-rs"
 repository = "https://github.com/scooter-dangle/fed-rs"
 description = "A sketch implementation of anonymous, tagged unions in stable Rust"
+documentation = "https://docs.rs/fed/0.2.2/fed"
 
 license = "Apache-2.0"
 
