--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fed"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Scott Steele <scottlsteele@gmail.com>"]
 
 homepage = "https://github.com/scooter-dangle/fed-rs"
@@ -11,3 +11,8 @@ documentation = "https://docs.rs/fed/0.2.2/fed"
 license = "Apache-2.0"
 
 [dependencies]
+
+[dev_dependencies]
+serde = "1.0.11"
+serde_derive = "1.0.11"
+bincode = "0.8.0"
