Include derive capability for Fed0 & Fed1 & update docs
Had neglected to include the auto-derive directive introduced in 0.4 for
Fed0 and Fed1. That is now fixed.

I also updated the README to include an example of using the auto-derive
capability in `init_fed!`.

The docs property of Cargo.toml now points to the non-version specified
URL of docs.rs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "fed"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Scott Steele <scottlsteele@gmail.com>"]
 
 homepage = "https://github.com/scooter-dangle/fed-rs"
 repository = "https://github.com/scooter-dangle/fed-rs"
 description = "A sketch implementation of anonymous, tagged unions in stable Rust"
-documentation = "https://docs.rs/fed/0.2.2/fed"
+documentation = "https://docs.rs/fed"
 
 license = "Apache-2.0"
 
